tests/NormalTests/paczka2/big_fuzzy/68370548.err
Error in line 1: S725 S725 26,55
Error in line 2: S725 S725 8,0
Error in line 8: Jph2G S366 1,7
Error in line 5: ex50 S549 25,6
Error in line 12: ex50 S366 97,9
Error in line 31: Jph2G A802 83,5
Error in line 23: DEDJ A802 42,8
Error in line 34: vpAWnltTiR S725 29,7
Error in line 44: ex50 A802 89,87
Error in line 42: ex50 S725 62,8
Error in line 66: H4B S549 46,3
Error in line 72: H4B A802 82,7
Error in line 86: lFP17 S549 82,5
Error in line 94: S725 S366 3J,3
Error in line 91: S725 A802 61,8
Error in line 107: H4B S366 -1,2
Error in line 99: Jph2G A802 19,5
Error in line 101: H4B S366 14,1
Error in line 103: S725 S366 134,2
Error in line 139: lFP17 S725 39,0
Error in line 149: vpAWnltTiR S725 85,4
Error in line 151: lFP17 S549 30,1
Error in line 147: DEDJ S366 42,1
Error in line 157: lFP17 S725 1,1
Error in line 169: lFP17 S366 33,2
Error in line 181: DEDJ A802 104,8
Error in line 196: S725 S366 33,0
Error in line 195: ex50 S549 121,8
Error in line 201: vpAWnltTiR S549 78,8
Error in line 227: vpAWnltTiR S366 30,4
Error in line 228: vpAWnltTiR S725 95,2
Error in line 232: vpAWnltTiR S366 59,3
Error in line 239: lFP17 S549 55,2
Error in line 240: ex50 A802 31,5
